--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
-accelerate==0.25.0
-transformers==4.36.2
-tokenizers==0.15.0
-cn2an==0.5.22
+accelerate==1.6.0
+transformers==4.48.2
+tokenizers==0.21.1
+cn2an==0.5.23
 ffmpeg-python==0.2.0
-Cython==3.0.7
+Cython==3.0.12
 g2p-en==2.1.0
 jieba==0.42.1
-keras==2.9.0
-numba==0.58.1
-numpy==1.26.2
-pandas==2.1.3
-matplotlib==3.8.2
+keras==3.9.1
+numba==0.61.0
+numpy==2.1.3
+pandas==2.2.3
+matplotlib==3.10.1
 opencv-python==4.9.0.80
 vocos==0.1.0
-accelerate==0.25.0
-tensorboard==2.9.1
-omegaconf
-sentencepiece
-librosa
-gradio
-tqdm
+accelerate==1.6.0
+tensorboard==2.19.0
+omegaconf==2.3.0
+sentencepiece==0.2.0
+librosa==0.11.0
+gradio==5.23.3
+tqdm==4.67.1
 
-WeTextProcessing; platform_machine != "Darwin"
-wetext; platform_system == "Darwin"
+# WeTextProcessing==1.0.3; platform_machine != "Darwin"
+# wetext; platform_system == "Darwin"
