--- a/checkpoints/config.yaml
+++ b/checkpoints/config.yaml
@@ -12,13 +12,14 @@ dataset:
         normalize: false
 
 gpt:
-    model_dim: 1280
-    max_mel_tokens: 800
-    max_text_tokens: 600
-    heads: 20
+    model_dim: 1024
+    max_mel_tokens: 605
+    max_text_tokens: 402
+    heads: 16
     use_mel_codes_as_input: true
     mel_length_compression: 1024
-    layers: 24
+    layers: 20
+    activation_function: "gelu_pytorch_tanh"
     number_text_tokens: 12000
     number_mel_codes: 8194
     start_mel_token: 8192
@@ -63,7 +64,7 @@ bigvgan:
     speaker_embedding_dim: 512
     cond_d_vector_in_each_upsampling_layer: true
 
-    gpt_dim: 1280
+    gpt_dim: 1024
 
     activation: "snakebeta"
     snake_logscale: true
@@ -110,4 +111,3 @@ bigvgan:
 dvae_checkpoint: dvae.pth
 gpt_checkpoint: gpt.pth
 bigvgan_checkpoint: bigvgan_generator.pth
-version: 1.5
